updated spelling finished chapter4

--- a/statistical thinking in python part 1/chapter 3.ipynb
+++ b/statistical thinking in python part 1/chapter 3.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -481,13 +481,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Probability of seven or more no-hitters: 0.007\n"
+     ]
+    }
+   ],
    "source": [
-    "samples_poisson\n",
+    "# Draw 10,000 samples out of Poisson distribution:\n",
+    "n_nohitters = np.random.poisson(251/115,size = 10000)\n",
     "\n",
-    "## some code here"
+    "# Compute number of samples that are seven or greater: n_large\n",
+    "n_large = np.sum(n_nohitters>6 )\n",
+    "\n",
+    "# Compute probability of getting seven or more: p_large\n",
+    "p_large = n_large/10000\n",
+    "\n",
+    "# Print the result\n",
+    "print('Probability of seven or more no-hitters:', p_large)"
    ]
   },
   {
@@ -553,7 +569,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
